# ePi

./: .ci-ignore  .gitignore  .gitmodules  CMakeLists.txt  README.md  autoversion  ePi.workspace  test.html
.github/workflows/: main.yml
cartcontroller/: CMakeLists.txt  cartcontroller.cbp
cartcontroller/include/: cartcontrollerApp.h  cartcontrollerMain.h  dlgfilemanager.h  dlgsystem.h  pnlResource.h  version.h
cartcontroller/src/: cartcontrollerApp.cpp  cartcontrollerMain.cpp  dlgfilemanager.cpp  dlgsystem.cpp  pnlResource.cpp  version.cpp
cartcontroller/wxsmith/: cartcontrollerdialog.wxs  pnlResource.wxs
common/include/: epi_version.h  epicron.h  epiutils.h  epiwriter.h  inimanager.h  inisection.h  jsonutils.h  logtofile.h  mongoose.h  utils.h
common/src/: epicron.cpp  epiutils.cpp  epiwriter.cpp  inimanager.cpp  inisection.cpp  jsonutils.cpp  logtofile.cpp  utils.cpp
controller/: CMakeLists.txt  controller.cbp
controller/include/: constants.h  controllerApp.h  controllerMain.h  dlgEdit.h  dlgError.h  dlgInfo.h  dlgOptions.h  dlgUpload.h  dlgUsb.h  multipartupload.h  progress.h  restfulclient.h  uirect.h  usbchecker.h  version.h  websocketclient.h  wmbutton.h  wmbuttonfactory.h  wmedit.h  wmfocusmanager.h  wmkeyboard.h  wmlabel.h  wmlist.h  wxhttpclientmanager.h  wxwebsocketclient.h
controller/src/: constants.cpp  controllerApp.cpp  controllerMain.cpp  dlgEdit.cpp  dlgError.cpp  dlgInfo.cpp  dlgOptions.cpp  dlgUpload.cpp  dlgUsb.cpp  multipartupload.cpp  progress.cpp  restfulclient.cpp  usbchecker.cpp  version.cpp  websocketclient.cpp  wmbutton.cpp  wmedit.cpp  wmkeyboard.cpp  wmlabel.cpp  wmlist.cpp  wxhttpclientmanager.cpp  wxwebsocketclient.cpp
controller/wxsmith/: controllerdialog.wxs  dlgEdit.wxs  dlgError.wxs  dlgInfo.wxs  dlgOptions.wxs  dlgUpload.wxs  dlgUsb.wxs
files/: config.ini  epi.service
launcher/: CMakeLists.txt  launcher.cbp
launcher/include/: launcher.h
launcher/src/: launcher.cpp  main.cpp
loopi/: index.php  pi@192.168.0.201  test.html
loopi/ajax/: add_loopi.php  delete_loopi.php
loopi/css/: loopi.css
loopi/data/: loopi
loopi/functions/: file.php  helper.php
loopi/include/: cron.inc  header.inc  navbar.inc  overview.inc
loopi/js/: ajax.js  cronstrue.min.js
loopi/status/: index.html  index.php
loopi/system/: .index.php.swp  index.html  index.php
player/: player.cbp  player.depend  player.layout
player/include/: audiofile.h  endpoints.h  inimanager.h  inisection.h  mongooseserver.h  mongoosethread.h  mp3file.h  resource.h  resourcemanager.h  response.h  sysinfomanager.h  utils.h  wavfile.h
player/src/: audiofile.cpp  endpoints.cpp  inimanager.cpp  main.cpp  mongooseserver.cpp  mongoosethread.cpp  mp3file.cpp  resource.cpp  resourcemanager.cpp  utils.cpp  wavfile.cpp
player3/: CMakeLists.txt  main.cpp  player3.cbp
player3/include/: audiofile.h  epicron.h  epiwriter.h  filesource.h  mp3file.h  playlist.h  playout.h  resampler.h  resources.h  schedule.h  soundfile.h  srcwrapper.h  version.h
player3/src/: audiofile.cpp  epicron.cpp  epiwriter.cpp  filesource.cpp  main.cpp  mp3file.cpp  playlist.cpp  playout.cpp  resampler.cpp  resources.cpp  schedule.cpp  soundfile.cpp  version.cpp
server/: .CMakeLists.txt.swp  CMakeLists.txt  server.cbp  version.h
server/include/: audiofile.h  core.h  inimanager.h  launcher.h  mongooseserver.h  mp3file.h  namedtype.h  ntpstatus.h  proccheck.h  resource.h  resourcemanager.h  sysinfomanager.h  uidutils.h  version.h  wavfile.h
server/src/: audiofile.cpp  core.cpp  inisection.cpp  launcher.cpp  main.cpp  mongooseserver.cpp  ntpstatus.cpp  proccheck.cpp  resource.cpp  resourcemanager.cpp  schedule.cpp  sysinfomanager.cpp  uidutils.cpp  utils.cpp  version.cpp  wavfile.cpp
tests/cron/: cron.cbp  main.cpp
